# rust-clock-stm32

./: Cargo.toml  chips
.cargo/: config.toml
src/: glyph.rs  main.rs  vk16k33.rs
